# LLM_and_Agents

./: .gitignore  main.py  pyproject.toml
src/: 4_viz_embedding.py  Untitled.ipynb
src/rag/: DGI-INN_TOC.json  DGI-INN_TOC.txt  DGI-INN_TOC_Processed.json  extracted_chapter.txt  parse_toc_to_json.py  prompts.py  rag_utils.py  split_chapterwise.py  temp.txt
src/rag/ingestion/: chunker.py  keyword_extractor.py  summarizer.py
src/rag/models/: toc_schema.py
src/study_trends/: yfinance_api_test.py
src/utils/: ollama_model.py  pretty_print.py  tokenizer.py
week1/: 0_gil_test.py  1_summarize_url.py  2_tokenize.py  3_embedding.py  README.md
week1/study_trends/: yfinance_api_test.py
week1/utils/: ollama_model.py  prompts.py
