[project]
name = "llm-and-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.2.10",
    "langchain-core>=1.2.16",
    "langchain-ollama>=1.0.1",
    "matplotlib>=3.10.8",
    "nltk>=3.9.3",
    "pandas>=3.0.1",
    "pip>=26.0.1",
    "spacy>=3.8.11",
    "yfinance>=1.2.0",
]
