[project]
name = "llm-and-agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docling>=2.75.0",
    "faiss-cpu>=1.13.2",
    "gensim>=4.4.0",
    "jupyter>=1.1.1",
    "langchain>=1.2.10",
    "langchain-core>=1.2.16",
    "langchain-docling>=2.0.0",
    "langchain-faiss>=0.1.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.1",
    "matplotlib>=3.10.8",
    "mplcursors>=0.7",
    "nltk>=3.9.3",
    "pdfplumber>=0.11.9",
    "pip>=26.0.1",
    "pypdf2>=3.0.1",
    "scikit-learn>=1.8.0",
    "spacy>=3.8.11",
    "yfinance>=1.2.0",
]
